syntax = "proto3";
option go_package = ".;proto";

service SocialService{
  rpc GetFollowList(GetFollowListRequest) returns (GetFollowListResponse);
  rpc GetFollowerList(FollowerListRequest) returns (FollowerListResponse);
  rpc GetFriendList(GetFriendListRequest) returns (GetFriendListResponse);
  rpc RelationAction(RelationActionRequest) returns (RelationActionResponse);
  rpc MsgChat(MsgChatRequest) returns (MsgChatResponse);
  rpc MsgAction(MsgActionRequest) returns (MsgActionResponse);

}

message MsgActionRequest{
  int64 user_id =1;
  int64 to_user_id=2;
  int32 action_type = 3;
  string content = 4;

}
message MsgActionResponse{
}
message MsgChatRequest{
  int64 user_id =1;
  int64 to_user_id=2;

}
message MsgChatResponse{
  repeated Msg message_list=1;
}
message Msg{
  int64 id = 1;
  string content = 2;
  string create_time=3;
}
message RelationActionRequest{
  int64 user_id =1;
  int64 to_user_id=2;
  int32 action_type=3;

}
message RelationActionResponse{

}
message GetFriendListRequest{
  int64 user_id=1;
}
message GetFriendListResponse{
  repeated User user_list = 1;
}
message GetFollowListRequest{
  int64 user_id=1;
}
message GetFollowListResponse{
  repeated User user_list = 1;
}
message FollowerListRequest{
  int64 user_id=1;
}
message User{
  int64 id =1;
  string name  =2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
}
message FollowerListResponse{
  repeated User user_list = 1;
}